--- a/site/index.html
+++ b/site/index.html
@@ -17,8 +17,7 @@
             <h3>Chicken</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-          </p>
+            Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.          </p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -27,8 +26,7 @@
           <h3>Beef</h3>
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-        </p>
+          Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.        </p>
       </div>
     </div>
     <div class="col-lg-4 col-lg-tablet">
@@ -37,8 +35,7 @@
         <h3>Sushi</h3>
       </div>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
-      </p>
+        Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.      </p>
     </div>
   </div>
 
