--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,8 @@
             <h3>Chicken</h3>
           </div>
           <p>
-            Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.          </p>
+            Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.          
+          </p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -26,7 +27,8 @@
           <h3>Beef</h3>
         </div>
         <p>
-          Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.        </p>
+          Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.        
+        </p>
       </div>
     </div>
     <div class="col-lg-4 col-lg-tablet">
@@ -35,7 +37,8 @@
         <h3>Sushi</h3>
       </div>
       <p>
-        Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.      </p>
+        Lorem ipsum odor amet, consectetuer adipiscing elit. Fames urna per natoque felis dis tristique duis. Tempus risus mi ultrices netus tempor, nullam orci.      
+      </p>
     </div>
   </div>
 
